--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
-Flask==2.0.1
-requests==2.26.0
-SQLAlchemy==1.4.22
-pandas==1.3.1
-numpy==1.21.1
-gunicorn==20.1.0
+blinker==1.8.2
+click==8.1.7
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+gunicorn==20.0.4
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+python-dotenv==1.0.1
+setuptools==75.1.0
+SQLAlchemy==2.0.35
+typing_extensions==4.12.2
+Werkzeug==3.0.4
